Added wsl setting to DRS module. Updated npm publish command to use the npm registry explicitly.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "javascript.format.semicolons": "remove",
     "typescript.format.semicolons": "remove",
     "cSpell.words": [
+      "ASPNETCORE",
       "lcov",
       "nodb"
     ]
