Fixed issue with non-relative imports. Updated vscode settings to mitigate the possibility of future issues with non-relative imports.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,21 @@
 {
-    "[typescript]": {
-      "editor.autoIndent": "full",
-      "editor.trimAutoWhitespace": false
-    },
-    "[javascript]": {
-      "editor.autoIndent": "full",
-      "editor.trimAutoWhitespace": false
-    },
-    "javascript.preferences.quoteStyle": "single",
-    "typescript.preferences.quoteStyle": "single",
-    "javascript.format.semicolons": "remove",
-    "typescript.format.semicolons": "remove",
-    "cSpell.words": [
-      "ASPNETCORE",
-      "lcov",
-      "nodb"
-    ]
-  }
-  
+  "[typescript]": {
+    "editor.autoIndent": "full",
+    "editor.trimAutoWhitespace": false
+  },
+  "[javascript]": {
+    "editor.autoIndent": "full",
+    "editor.trimAutoWhitespace": false
+  },
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.preferences.quoteStyle": "single",
+  "javascript.format.semicolons": "remove",
+  "typescript.format.semicolons": "remove",
+  "cSpell.words": [
+    "ASPNETCORE",
+    "lcov",
+    "nodb"
+  ],
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "javascript.preferences.importModuleSpecifier": "relative"
+}
