--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
   "cSpell.words": [
     "ASPNETCORE",
     "lcov",
-    "nodb"
+    "nodb",
+    "sqlserver"
   ],
   "typescript.preferences.importModuleSpecifier": "relative",
   "javascript.preferences.importModuleSpecifier": "relative"
