--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swig-cli-modules",
-  "version": "0.0.18",
+  "version": "0.1.0",
   "description": "Groups of swig tasks for use in other projects",
   "repository": {
     "type": "git",
@@ -78,6 +78,16 @@
         "default": "./dist/cjs/modules/EntityFramework/EntityFramework.js"
       }
     },
+    "./EntityFrameworkUtils": {
+      "import": {
+        "types": "./dist/esm/modules/EntityFramework/EntityFrameworkUtils.d.ts",
+        "default": "./dist/esm/modules/EntityFramework/EntityFrameworkUtils.js"
+      },
+      "require": {
+        "types": "./dist/cjs/modules/EntityFramework/EntityFrameworkUtils.d.ts",
+        "default": "./dist/cjs/modules/EntityFramework/EntityFrameworkUtils.js"
+      }
+    },
     "./utils": {
       "import": {
         "types": "./dist/esm/utils/index.d.ts",
@@ -102,24 +112,27 @@
     "dotnet-react-sandbox",
     "docker-compose",
     "entity-framework",
+    "database-migrations",
+    "docker",
+    "docker-compose",
     "automation",
     "dev-workflow"
   ],
   "author": "Mike Thompson",
   "license": "MIT",
   "dependencies": {
-    "@mikeyt23/node-cli-utils": "^2.0.8",
+    "@mikeyt23/node-cli-utils": "^2.0.18",
     "swig-cli": "^0.0.15"
   },
   "devDependencies": {
-    "@types/node": "^18.18.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@types/node": "^18.18.13",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "c8": "^8.0.1",
-    "eslint": "^8.51.0",
+    "eslint": "^8.54.0",
     "ts-node": "^10.9.1",
-    "tsx": "^3.13.0",
-    "typescript": "^5.2.2"
+    "tsx": "^4.5.0",
+    "typescript": "^5.3.2"
   },
   "volta": {
     "node": "18.18.0"
