--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swig-cli-modules",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Groups of swig tasks for use in other projects",
   "repository": {
     "type": "git",
@@ -121,20 +121,20 @@
   "author": "Mike Thompson",
   "license": "MIT",
   "dependencies": {
-    "@mikeyt23/node-cli-utils": "^2.0.19",
-    "swig-cli": "^0.0.15"
+    "@mikeyt23/node-cli-utils": "file:../node-cli-utils/mikeyt23-node-cli-utils-2.0.20.tgz",
+    "swig-cli": "^0.0.16"
   },
   "devDependencies": {
-    "@types/node": "^18.18.13",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@types/node": "^18.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "c8": "^8.0.1",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "ts-node": "^10.9.1",
-    "tsx": "^4.5.0",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.2"
   },
   "volta": {
-    "node": "18.18.0"
+    "node": "18.19.0"
   }
 }
