--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
   "typescript.format.semicolons": "remove",
   "cSpell.words": [
     "ASPNETCORE",
+    "efbundle",
     "lcov",
     "nodb",
     "sqlserver"
